# indexer-c

./: CMakeLists.txt  README.md
config/: indexer.toml
include/botindex/: chain.h  config.h  head_follower.h  log.h  redisio.h  rpc.h  util.h
src/: chain.c  config.c  head_follower.c  log.c  main.c  redisio.c  rpc.c  util.c
tests/: CMakeLists.txt  test_chain.c  test_config.c  test_util.c
tests/fixtures/: indexer.bad.toml  indexer.ok.toml
